fix: default schedule options are cropped #5261

--- a/ui/src/app/settings/components/project-sync-windows-edit/project-sync-windows-edit.scss
+++ b/ui/src/app/settings/components/project-sync-windows-edit/project-sync-windows-edit.scss
@@ -17,3 +17,13 @@
         padding-left: 0;
     }
 }
+
+.options-wrapper {
+    display: block;
+    height: 206px;
+    max-height: 206px;
+}
+
+.text-wrapper {
+    white-space: normal;
+}
